# fifty

./: README.md  READMEe.md
01_encrypt_script/: .gitignore  pyvenv.cfg
01_encrypt_script/src/: cryp.py  test.txt
02_csv_data_analyzer/: .gitignore
02_csv_data_analyzer/src/main/java/: CSVAnalyzerCLI.java  Scatter_Plot.java
03_raytracer/: .gitignore  CMakeLists.txt
03_raytracer/.cache/clangd/index/: Camera.cpp.461C0F07C552E935.idx  Camera.h.7A802410747E6214.idx  Camera.hpp.2BA79DE94C496524.idx  Color.h.B207A51937EE4E69.idx  Hittable.h.4B120F9E824C5C67.idx  Hittable_List.h.C4D009941FA74A6D.idx  Interval.h.6FD55F9F83DA5BF4.idx  Ray.cpp.21B1540C7ABE0EDC.idx  Ray.h.BCD44896C72E0F04.idx  Ray.hpp.68EA6A1A0428B093.idx  Sphere.cpp.9F5FA0C79211C3B3.idx  Sphere.h.8104AC42479C7F25.idx  Sphere.hpp.6DFF9CC335EABE8C.idx  Utils.h.ECD483287F843DEA.idx  Vec3.h.C8936B586D3B9216.idx  Vector3D.cpp.C630848BC1553FCA.idx  Vector3D.hpp.350238601415A6DE.idx  main.cpp.4812B791762B72AC.idx
03_raytracer/include/: Camera.h  Camera.hpp  Color.h  Hittable.h  Hittable_List.h  Interval.h  Material.h  Ray.h  Sphere.h  Sphere.hpp  Utils.h  Vec3.h  Vector3D.hpp
03_raytracer/include_OLD/: Camera.hpp  Ray.hpp  Sphere.hpp
03_raytracer/src/: Camera.cpp  Ray.cpp  Sphere.cpp  Vector3D.cpp  main.cpp
03_raytracer/src_OLD/: Camera.cpp  Sphere.cpp  Vector3D.cpp  main.cpp
04_game_of_life/: .gitignore  CMakeLists.txt
04_game_of_life/.cache/clangd/index/: Button.cpp.BC3228984FA602AA.idx  Button.h.E7D1B3A2AC8610DE.idx  Rules.cpp.2BB11218F2464172.idx  Rules.h.42E6D4678BE8B47E.idx  main.cpp.BA5D3A6645F643A0.idx
04_game_of_life/include/: Button.h  Rules.h
04_game_of_life/src/: Button.cpp  Rules.cpp  TODO.txt  main.cpp
05_music_player/: pom.xml
05_music_player/src/: TODO.txt
05_music_player/src/main/java/com/timothypav/musicplayer/: Library.java  MainController.java  MusicPlayerApp.java  PlaybackBar.java  Playlist.java  PlaylistCatalog.java  Song.java  SongPlayer.java  SongSearch.java  VolumeBar.java
05_music_player/src/main/resources/archetype-resources/: pom.xml
05_music_player/src/main/resources/styles/: styles.css
06_sudoku_solver/: CMakeLists.txt
06_sudoku_solver/.cache/clangd/index/: SudokuBoard.cpp.54B780EA3DADE4EA.idx  SudokuBoard.h.7CE518B871D73B1B.idx  main.cpp.959A27BE3B43EAC7.idx
06_sudoku_solver/include/: SudokuBoard.h
06_sudoku_solver/src/: SudokuBoard.cpp  main.cpp
CSV_data_analyzer/: pom.xml
CSV_data_analyzer/data/: test.csv
CSV_data_analyzer/src/: CSV_Analyzer.java  Main.java
CSV_data_analyzer/src/main/java/: CSV_Analyzer.java  Histogram.java  Main.java  Tuple.java
encrypt/src/: cryp.spec  main.py  sample1.txt  test.py
